--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "multer": "^1.4.5",
+    "multer": "latest",
     "cloudinary": "^1.39.0",
     "streamifier": "^0.1.1",
     "cors": "^2.8.5"
   }
 }
+
 
