--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "scripts": {
     "start": "node server.js"
   },
-  "dependencies": {
-    "express": "^4.18.2",
-    "multer": "latest",
-    "cloudinary": "^1.39.0",
-    "streamifier": "^0.1.1",
-    "cors": "^2.8.5"
-  }
+ "dependencies": {
+  "express": "^4.18.2",
+  "multer": "latest",
+  "cloudinary": "^1.39.0",
+  "streamifier": "^0.1.1",
+  "cors": "^2.8.5",
+  "axios": "^1.6.0"
 }
+  }
+
+
 
 
